--- a/editions/2023/id/todo/0x11-t10.md
+++ b/editions/2023/id/todo/0x11-t10.md
@@ -4,13 +4,10 @@
 | ------ | --------- |
 | [API1:2023 - Otorisasi Rusak Tingkat Obyek][api1] | API cenderung mengungkap titik akhir yang menangani identifier objek, menciptakan suatu permukaan serangan yang lebar dari masalah-masalah Kendali Akses Tingkat Objek. Pemeriksaan otorisasi tingkat objek mesti dipertimbangkan dalam setiap fungsi yang mengakses suatu sumber data memakai ID dari pengguna. |
 | [API2:2023 - Otentikasi yang Rusak][api2] | Mekanisme otentikasi sering diimplementasi secara salah, memungkinkan penyerang mengkompromi token otentikasi atau untuk mengeksploitasi cacat implementasi untuk menyaru identitas sebagai pengguna lain secara sementara atau permanen. Mengompromi kemampuan sistem untuk mengidentifikasi klien/pengguna, mengkompromi keamanan API secara keseluruhan. |
-| [API3:2023 - Otorisasi Rusak Tingkat Properti Obyek][api3] | Kategori ini menggabung [API3:2019 Excessive Data Exposure][1] dan [API6:2019 - Mass Assignment][2], 
-memfokuskan ke akar masalah: kurangnya atau tidak tepatnya validasi otorisasi pada tingkat properti objek. Ini mengarah ke pengungkapan informasi atau manipulasi oleh pihak yang tidak punya otorisasi. |
+| [API3:2023 - Otorisasi Rusak Tingkat Properti Obyek][api3] | Kategori ini menggabung [API3:2019 Excessive Data Exposure][1] dan [API6:2019 - Mass Assignment][2], memfokuskan ke akar masalah: kurangnya atau tidak tepatnya validasi otorisasi pada tingkat properti objek. Ini mengarah ke pengungkapan informasi atau manipulasi oleh pihak yang tidak punya otorisasi. |
 | [API4:2023 - Konsumsi Sumber Daya Tak Dibatasi][api4] | Memenuhi permintaan API memerlukan sumber daya seperti bandwidth jaringan, CPU, memori, dan penyimpanan. Sumber daya lain seperti surel/SMS/panggilan telepon atau validasi biometrik disajikan oleh penyedia layanan melalui integrasi API, dan dibayar per permintaan. Serangan yang sukses bisa mengarah ke Denial of Service atau peningkatan biaya operasi. |
 | [API5:2023 - Otentikasi Rusak Tingkat Fungsi][api5] | Kebijakan kendali akses yang rumit dengan hirarki, grup, peran yang berbeda, dan pemisahan yang tidak jelas antara fungsi-fungsi administratif dan biasa, cenderung mengarah ke cacat otorisasi. Dengan mengekploatasi masalah-masalah ini, penyerang dapat memperoleh akses ke sumber daya pengguna lain dan/atau fungsi-fungsi administratif. |
-| [API6:2023 - Akses Tak Dibatasi ke Alur Bisnis Sensitif][api6] | 
-
-APIs vulnerable to this risk expose a business flow - such as buying a ticket, or posting a comment - without compensating for how the functionality could harm the business if used excessively in an automated manner. This doesn't necessarily come from implementation bugs. |
+| [API6:2023 - Akses Tak Dibatasi ke Alur Bisnis Sensitif][api6] | API yang rentan terhadap risiko ini mengungkap suatu alur bisnis - seperti misalnya membeli sebuah tiket, atau mengirim suatu komentar - tanpa mengkompensasi bagaimana fungsionalitas tersebut dapat mencederai bisnis bila dipakai secara berlebihan dengan cara terotomasi. Ini tidak selalu datang dari bug implementasi. |
 | [API7:2023 - Pemalsuan Permintaan Sisi Server][api7] | Server-Side Request Forgery (SSRF) flaws can occur when an API is fetching a remote resource without validating the user-supplied URI. This enables an attacker to coerce the application to send a crafted request to an unexpected destination, even when protected by a firewall or a VPN. |
 | [API8:2023 - Kesalahan Konfigurasi Keamanan][api8] | APIs and the systems supporting them typically contain complex configurations, meant to make the APIs more customizable. Software and DevOps engineers can miss these configurations, or don't follow security best practices when it comes to configuration, opening the door for different types of attacks.  |
 | [API9:2023 - Manajemen Inventaris yang Tidak Tepat][api9] | APIs tend to expose more endpoints than traditional web applications, making proper and updated documentation highly important. A proper inventory of hosts and deployed API versions also are important to mitigate issues such as deprecated API versions and exposed debug endpoints. |
